css/main.css
body,
html {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
}

* {
    cursor: url("../images/rocket.png"), auto;
    user-select: none;
}

#events {
    z-index: 16;
    position: relative;
}

#events ul {
    list-style-type: none;
    color: white;
    display: flex;
}

#themes-list li {
    margin: 0 auto;
    font-size: 20px;
}

.event-cards {
    display: none;
    margin: 0 20px;
}

.active-cards {
    display: flex;
}

.card-container {
    perspective: 600;
    position: relative;
    height: 25vw;
    min-height: 200px;
}

@media(max-width:767.5px) {
    .card-container {
        height: 35vw;
    }
}

@media(max-width:575.5px) {
    .card-container {
        height: 65vw;
    }
}

#events ul .active {
    color: white;
    text-decoration: underline;
}

#events ul .active:hover {
    color: white !important;
}

#events li {
    transform: scale(1);
    transition: .4s ease-in-out;
}

#events li:hover {
    color: white !important;
    transform: scale(1.2);
    transition: .4s ease-in-out;
}

.card-container img {
    padding: 5px 10%;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.card {
    border: 0;
    height: 100%;
    position: absolute;
    transform-style: preserve-3d;
    transition: all 1s ease-in-out;
    width: 100%;
    background: none;
}

.card:hover {
    transform: rotateY(180deg);
}

.card .side {
    backface-visibility: hidden;
    border-radius: 6px;
    height: 100%;
    position: absolute;
    overflow: hidden;
    width: 100%;
}

.card .back {
    background: #eaeaed;
    color: #0087cc;
    line-height: 150px;
    text-align: center;
    transform: rotateY(180deg);
}

#countdown {
    width: 90%;
    max-width: 465px;
    z-index: 16;
    height: 140px;
    text-align: center;
    background: #222;
    background-image: -webkit-linear-gradient(top, #222, #333, #333, #222);
    background-image: -moz-linear-gradient(top, #222, #333, #333, #222);
    background-image: -ms-linear-gradient(top, #222, #333, #333, #222);
    background-image: -o-linear-gradient(top, #222, #333, #333, #222);
    border: 1px solid #111;
    border-radius: 5px;
    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.6);
    padding: 24px 0;
    margin-top: 40px;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

@media(max-width: 500px) {
    #countdown {
        margin-top: 0px;
    }
}

#countdown:before {
    content: "";
    width: 8px;
    height: 65px;
    background: #444;
    background-image: -webkit-linear-gradient(top, #555, #444, #444, #555);
    background-image: -moz-linear-gradient(top, #555, #444, #444, #555);
    background-image: -ms-linear-gradient(top, #555, #444, #444, #555);
    background-image: -o-linear-gradient(top, #555, #444, #444, #555);
    border: 1px solid #111;
    border-top-left-radius: 6px;
    border-bottom-left-radius: 6px;
    display: block;
    position: absolute;
    top: 48px;
    left: -10px;
}

#countdown:after {
    content: "";
    width: 8px;
    height: 65px;
    background: #444;
    background-image: -webkit-linear-gradient(top, #555, #444, #444, #555);
    background-image: -moz-linear-gradient(top, #555, #444, #444, #555);
    background-image: -ms-linear-gradient(top, #555, #444, #444, #555);
    background-image: -o-linear-gradient(top, #555, #444, #444, #555);
    border: 1px solid #111;
    border-top-right-radius: 6px;
    border-bottom-right-radius: 6px;
    display: block;
    position: absolute;
    top: 48px;
    right: -10px;
}

#countdown #tiles {
    position: relative;
    z-index: 1;
}

#countdown #tiles>span {
    width: 19%;
    max-width: 92px;
    font: bold 250% 'Droid Sans', Arial, sans-serif;
    -webkit-touch-callout: none;
    /* iOS Safari */
    -webkit-user-select: none;
    /* Safari */
    -khtml-user-select: none;
    /* Konqueror HTML */
    -moz-user-select: none;
    /* Firefox */
    -ms-user-select: none;
    /* Internet Explorer/Edge */
    user-select: none;
    text-align: center;
    color: #111;
    background-color: #ddd;
    background-image: -webkit-linear-gradient(top, #bbb, #eee);
    background-image: -moz-linear-gradient(top, #bbb, #eee);
    background-image: -ms-linear-gradient(top, #bbb, #eee);
    background-image: -o-linear-gradient(top, #bbb, #eee);
    border-top: 1px solid #fff;
    border-radius: 3px;
    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.7);
    margin: 0 7px;
    padding: 3% 0;
    display: inline-block;
    position: relative;
}

#countdown #tiles>span:before {
    content: "";
    width: 100%;
    height: 13px;
    background: #111;
    display: block;
    padding: 0 3px;
    position: absolute;
    top: 41%;
    left: -3px;
    z-index: -1;

}

#countdown .labels {
    width: 100%;
    height: 25px;
    text-align: center;
    position: absolute;
    bottom: 8px;
}

#countdown .labels li {
    width: 22%;
    font: bold 15px 'Droid Sans', Arial, sans-serif;
    color: #ccc;
    text-shadow: 1px 1px 0px #000;
    text-align: center;
    user-select: none;
    text-transform: uppercase;
    display: inline-block;
}

#particles-js {
    width: 100%;
    height: 100%;
    position: fixed;
    background-color: #000000;
    z-index: 16;
}

#preloader {
    width: 100% !important;
    height: 100% !important;
    top: 0 !important;
    left: 0 !important;
    overflow: hidden !important;
    background: white !important;
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1005;
}

svg {
    top: 0;
    left: 0;
    width: 100% !important;
    height: 100% !important;
}

.ml1 {
    font-weight: 900;
    font-size: 2.5em;
}

.letters {
    color: #26292D;
}

.ml1 .text-wrapper {
    position: relative;
    display: inline-block;
    padding-top: 0.1em;
    padding-right: 0.05em;
    padding-bottom: 0.15em;
}
/* ... */

